--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.3",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "googleapis": "^146.0.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
